k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kaufeedback-backend-service

spec:
  selector:
    app: kaufeedback-backend

  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

  type: ClusterIP
