k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kaufeedback-frontend-service

spec:
  selector:
    app: kaufeedback-frontend

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
